--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Explain Docs — balu.app</title>
+  <link rel="stylesheet" href="./assets/tailwind.css">
 </head>
 <body class="bg-slate-50 text-slate-900">
   <div class="max-w-3xl mx-auto px-4 py-10">
