--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
     }
 
     async function processDoc(paymentToken) {
+        console.log("AI binding exists:", !!env.AI);
       // Build payload with either text or file (multipart)
        const langCode = document.getElementById("language").value; // ✅ en/te/hi/ta
        const cat = document.getElementById("category")?.value || null;
@@ -289,6 +290,7 @@
             })
         });
         if (!res.ok) throw new Error("Processing failed");
+        console.log("Using LLM path");
         return res.json();
       }
 
@@ -300,7 +302,7 @@
           language: langCode,
           category: cat,
           paymentToken,
-          text: (textInput.value || "").trim()
+          text: (pastedText || "").trim()
         })
       });
       if (!res.ok) throw new Error("Processing failed");
